# matrix-remote-closedown

./: Cargo.toml  Containerfile  README.md  flake.nix
.github/workflows/: ci.yml
src/: command.rs  event.rs  main.rs  matrix.rs  metrics.rs  mqtt.rs  processing.rs  schema.rs
