[package]
name = "matrix-remote-closedown"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive", "env"] }
env_logger = "0.9"
log = "0.4"
matrix-sdk = { version = "0.4", default-features = false, features = ["encryption", "native-tls", "markdown"] }
paho-mqtt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
unindent = "0.1.8"
