[package]
name = "matrix-remote-closedown"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = "0.9"
log = "0.4"
matrix-sdk = { version = "0.6.0", default-features = false, features = ["e2e-encryption", "native-tls", "markdown"] }
paho-mqtt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "signal"] }
unindent = "0.1.8"
