[package]
name = "matrix-remote-closedown"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
kagiyama = "0.3.0"
lazy_static = "1.4.0"
log = "0.4"
matrix-client-boilerplate = { git = "https://github.com/DanNixon/matrix-client-boilerplate", tag = "v0.2.0" }
matrix-sdk = { version = "0.6.2", features = ["markdown"] }
mqtt-channel-client = { version = "0.5.0", features = ["metrics"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = "0.3"
unindent = "0.1.8"
